220712 budget app terminada!

--- a/freeCodeCamp/budgetapp/pruebas.ipynb
+++ b/freeCodeCamp/budgetapp/pruebas.ipynb
@@ -474,7 +474,514 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por último, me falta crear la función del gráfico."
+    "Por último, me falta crear la función del gráfico.  \n",
+    "Se espera que sea como lo que sigue:  \n",
+    "```\n",
+    "def test_create_spend_chart(self):\n",
+    "        self.food.deposit(900, \"deposit\")\n",
+    "        self.entertainment.deposit(900, \"deposit\")\n",
+    "        self.business.deposit(900, \"deposit\")\n",
+    "        self.food.withdraw(105.55)\n",
+    "        self.entertainment.withdraw(33.40)\n",
+    "        self.business.withdraw(10.99)\n",
+    "        actual = create_spend_chart([self.business, self.food, self.entertainment])\n",
+    "        expected = \"Percentage spent by category\\n100|          \\n 90|          \\n 80|          \\n 70|    o     \\n 60|    o     \\n 50|    o     \\n 40|    o     \\n 30|    o     \\n 20|    o  o  \\n 10|    o  o  \\n  0| o  o  o  \\n    ----------\\n     B  F  E  \\n     u  o  n  \\n     s  o  t  \\n     i  d  e  \\n     n     r  \\n     e     t  \\n     s     a  \\n     s     i  \\n           n  \\n           m  \\n           e  \\n           n  \\n           t  \"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_create_spend_chart(self):\n",
+    "    self.food.deposit(900, \"deposit\")\n",
+    "    self.entertainment.deposit(900, \"deposit\")\n",
+    "    self.business.deposit(900, \"deposit\")\n",
+    "    self.food.withdraw(105.55)\n",
+    "    self.entertainment.withdraw(33.40)\n",
+    "    self.business.withdraw(10.99)\n",
+    "    actual = create_spend_chart(\n",
+    "        [self.business, self.food, self.entertainment])\n",
+    "    expected = \"Percentage spent by category\\n100|          \\n 90|          \\n 80|          \\n 70|    o     \\n 60|    o     \\n 50|    o     \\n 40|    o     \\n 30|    o     \\n 20|    o  o  \\n 10|    o  o  \\n  0| o  o  o  \\n    ----------\\n     B  F  E  \\n     u  o  n  \\n     s  o  t  \\n     i  d  e  \\n     n     r  \\n     e     t  \\n     s     a  \\n     s     i  \\n           n  \\n           m  \\n           e  \\n           n  \\n           t  \"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo primero será manejar la lista de categorías, extraer sus datos y crear los porcentajes antes de \"imprimir\" los resultados. Tras una versión de la clase limitada a las funciones básicas, crearé la función externa y haré pruebas con varias categorías."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Food', '3'], ['Clothing', '0'], ['Auto', '5']]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Category:\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.ledger = []\n",
+    "        self.tot_led = 0\n",
+    "\n",
+    "    def check_funds(self, amount):\n",
+    "        if amount > self.tot_led:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "    def deposit(self, amount, description=''):\n",
+    "        self.ledger.append({'amount': amount, 'description': description})\n",
+    "        self.tot_led += amount\n",
+    "\n",
+    "    def withdraw(self, amount, description=''):\n",
+    "        if self.check_funds(amount) is True:\n",
+    "            self.ledger.append({'amount': -amount, 'description': description})\n",
+    "            self.tot_led -= amount\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return (f'{self.tot_led:.2f}')\n",
+    "    \n",
+    "    def total_withdrawals(self):\n",
+    "        withdrawals = 0\n",
+    "        for l in self.ledger:\n",
+    "            if l['amount'] < 0:\n",
+    "                withdrawals += l['amount']\n",
+    "        return withdrawals\n",
+    "\n",
+    "\n",
+    "def create_spend_chart(class_list):\n",
+    "    categories = []\n",
+    "    total_spend = 0\n",
+    "    \n",
+    "    for l in class_list:\n",
+    "        name_tot_per = []\n",
+    "        name_tot_per.append(l.name)\n",
+    "        spend = l.total_withdrawals()\n",
+    "        name_tot_per.append(spend)\n",
+    "        total_spend += spend\n",
+    "        categories.append(name_tot_per)\n",
+    "    \n",
+    "    # sacar los porcentajes de cada categoría\n",
+    "    for c in categories:\n",
+    "        per = abs(c[1]) / abs(total_spend/100)\n",
+    "        per = f'{int(per):02d}'  # me aseguro de que <10% tiene 0 delante\n",
+    "        per = per[0]  # y ahora me quedo solo con las decenas\n",
+    "        c.pop()  # ya no necesito el total\n",
+    "        c.append(per)\n",
+    "    \n",
+    "    return categories\n",
+    "\n",
+    "\n",
+    "\n",
+    "food = Category('Food')\n",
+    "food.deposit(150)\n",
+    "food.withdraw(70.15, \"groceries\")\n",
+    "food.withdraw(35.89, \"restaurant and more food for dessert\")\n",
+    "\n",
+    "clothing = Category('Clothing')\n",
+    "clothing.deposit(50)\n",
+    "clothing.withdraw(10.15, \"calchetinitos\")\n",
+    "clothing.withdraw(17.12, \"sombrero de copa\")\n",
+    "\n",
+    "auto = Category('Auto')\n",
+    "auto.deposit(500)\n",
+    "auto.withdraw(150.05, \"volante\")\n",
+    "auto.withdraw(20.52, \"dados colganderos\")\n",
+    "\n",
+    "create_spend_chart([food, clothing, auto])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para extraer todos los gastos, voy a implementar esta función en la propia clase, de manera que me resultará más sencillo acceder desde la función externa. Recorro los diccionarios que hay en el ledger. Si el valor es negativo, se va restando al total.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-26.04"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ledger = [{'amount': 100, 'description': 'chepa'}, {'amount': -10.15, 'description': 'groceries'},\n",
+    "          {'amount': -15.89, 'description': 'restaurant and more food for dessert'},\n",
+    "          {'amount': 1234567, 'description': 'sdfsdfsdfsdfsf'}]\n",
+    "\n",
+    "negativos = 0\n",
+    "for l in ledger:\n",
+    "    if l['amount'] < 0:\n",
+    "        negativos += l['amount']\n",
+    "\n",
+    "negativos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a hacer la parte imprimible. Usaré aquí la lista que obtengo de `categories` para no tener que tirar de clases y funciones e ir al lío. Recordemos:  \n",
+    "```\n",
+    "Percentage spent by category\n",
+    "100|          \n",
+    " 90|          \n",
+    " 80|          \n",
+    " 70|          \n",
+    " 60| o        \n",
+    " 50| o        \n",
+    " 40| o        \n",
+    " 30| o        \n",
+    " 20| o  o     \n",
+    " 10| o  o  o  \n",
+    "  0| o  o  o  \n",
+    "    ----------\n",
+    "     F  C  A  \n",
+    "     o  l  u  \n",
+    "     o  o  t  \n",
+    "     d  t  o  \n",
+    "        h     \n",
+    "        i     \n",
+    "        n     \n",
+    "        g     \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage spent by category\n",
+      "100|          \n",
+      " 90|          \n",
+      " 80|          \n",
+      " 70|          \n",
+      " 60|          \n",
+      " 50|       o  \n",
+      " 40|       o  \n",
+      " 30| o     o  \n",
+      " 20| o     o  \n",
+      " 10| o     o  \n",
+      "  0| o  o  o  \n",
+      "    ----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "categories = [['Food', '3'], ['Clothing', '0'], ['Auto', '5']]\n",
+    "\n",
+    "output01 = 'Percentage spent by category'\n",
+    "\n",
+    "output02 = []\n",
+    "counter = 10\n",
+    "for x in range(10):\n",
+    "    output02.append([f'{counter:2d}0| '])\n",
+    "    counter -= 1\n",
+    "output02.append(['  0| '])\n",
+    "\n",
+    "counter = 10\n",
+    "output02b = []\n",
+    "for line in output02:\n",
+    "    for c in categories:\n",
+    "        if int(c[1]) >= counter:\n",
+    "            line.append('o  ')\n",
+    "        else:\n",
+    "            line.append('   ')\n",
+    "    if counter > 0:\n",
+    "        line.append('\\n')\n",
+    "    counter -= 1\n",
+    "    line_join = ''.join(line)\n",
+    "    output02b.append(line_join)\n",
+    "\n",
+    "    \n",
+    "output03 = '    -' + ('-' * len(categories)*3)\n",
+    "\n",
+    "print(f'{output01}\\n{\"\".join(output02b)}\\n{output03}')\n",
+    "# output02b\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y la traca final."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    F  C  A  \n",
+      "    o  l  u  \n",
+      "    o  o  t  \n",
+      "    d  t  o  \n",
+      "       h     \n",
+      "       i     \n",
+      "       n     \n",
+      "       g     \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "categories = [['Food', '3'], ['Clothing', '0'], ['Auto', '5']]\n",
+    "\n",
+    "names = [x[0] for x in categories]\n",
+    "max_let = map(len, names)\n",
+    "rango = max(max_let)\n",
+    "\n",
+    "\n",
+    "output04 = []\n",
+    "for x in range(rango):\n",
+    "    output04.append('    ')\n",
+    "    for c in names:\n",
+    "        try:\n",
+    "            output04.append(c[x] + '  ')\n",
+    "        except:\n",
+    "            output04.append('   ')\n",
+    "    output04.append('\\n')\n",
+    "\n",
+    "# print(output04)\n",
+    "print(\"\".join(output04))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "['F  ', 'C  ', 'A  ', 'o  ', 'l  ', 'u  ', 'o  ', 'o  ', 't  ', 'd  ', 't  ', 'o  ', '   ', 'h  ', '   ', '   ', 'i  ', '   ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "categories = [['Food', '3'], ['Clothing', '0'], ['Auto', '5']]\n",
+    "\n",
+    "n = 6\n",
+    "# try:\n",
+    "#     print(categories[0][0][n])\n",
+    "# except:\n",
+    "#     print('xxx')\n",
+    "\n",
+    "output04 = []\n",
+    "for x in range(n):\n",
+    "    print(x)\n",
+    "    for c in names:\n",
+    "        try:\n",
+    "            output04.append(c[x] + '  ')\n",
+    "        except IndexError:\n",
+    "            output04.append('   ')\n",
+    "        # output04.append('\\n')\n",
+    "\n",
+    "print(output04)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creo que ya está todo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage spent by category\n",
+      "100|          \n",
+      " 90|          \n",
+      " 80|          \n",
+      " 70|          \n",
+      " 60|          \n",
+      " 50|       o  \n",
+      " 40|       o  \n",
+      " 30| o     o  \n",
+      " 20| o     o  \n",
+      " 10| o     o  \n",
+      "  0| o  o  o  \n",
+      "    ----------\n",
+      "     F  C  A  \n",
+      "     o  l  u  \n",
+      "     o  o  t  \n",
+      "     d  t  o  \n",
+      "        h     \n",
+      "        i     \n",
+      "        n     \n",
+      "        g     \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Category:\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.ledger = []\n",
+    "        self.tot_led = 0\n",
+    "\n",
+    "    def check_funds(self, amount):\n",
+    "        if amount > self.tot_led:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "    def deposit(self, amount, description=''):\n",
+    "        self.ledger.append({'amount': amount, 'description': description})\n",
+    "        self.tot_led += amount\n",
+    "\n",
+    "    def withdraw(self, amount, description=''):\n",
+    "        if self.check_funds(amount) is True:\n",
+    "            self.ledger.append({'amount': -amount, 'description': description})\n",
+    "            self.tot_led -= amount\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return (f'{self.tot_led:.2f}')\n",
+    "\n",
+    "    def total_withdrawals(self):\n",
+    "        withdrawals = 0\n",
+    "        for l in self.ledger:\n",
+    "            if l['amount'] < 0:\n",
+    "                withdrawals += l['amount']\n",
+    "        return withdrawals\n",
+    "\n",
+    "\n",
+    "def create_spend_chart(class_list):\n",
+    "    categories = []\n",
+    "    total_spend = 0\n",
+    "\n",
+    "    for l in class_list:\n",
+    "        name_tot_per = []\n",
+    "        name_tot_per.append(l.name)\n",
+    "        spend = l.total_withdrawals()\n",
+    "        name_tot_per.append(spend)\n",
+    "        total_spend += spend\n",
+    "        categories.append(name_tot_per)\n",
+    "\n",
+    "    # sacar los porcentajes de cada categoría\n",
+    "    for c in categories:\n",
+    "        per = abs(c[1]) / abs(total_spend/100)\n",
+    "        per = f'{int(per):02d}'  # me aseguro de que <10% tiene 0 delante\n",
+    "        per = per[0]  # y ahora me quedo solo con las decenas\n",
+    "        c.pop()  # ya no necesito el total\n",
+    "        c.append(per)\n",
+    "        \n",
+    "    output01 = 'Percentage spent by category'\n",
+    "    output02 = []\n",
+    "    counter = 10\n",
+    "    for x in range(10):\n",
+    "        output02.append([f'{counter:2d}0| '])\n",
+    "        counter -= 1\n",
+    "    output02.append(['  0| '])\n",
+    "\n",
+    "    counter = 10\n",
+    "    output02b = []\n",
+    "    for line in output02:\n",
+    "        for c in categories:\n",
+    "            if int(c[1]) >= counter:\n",
+    "                line.append('o  ')\n",
+    "            else:\n",
+    "                line.append('   ')\n",
+    "        if counter > 0:\n",
+    "            line.append('\\n')\n",
+    "        counter -= 1\n",
+    "        line_join = ''.join(line)\n",
+    "        output02b.append(line_join)\n",
+    "\n",
+    "    output03 = '    -' + ('-' * len(categories)*3)\n",
+    "    \n",
+    "    names = [x[0] for x in categories]\n",
+    "    max_let = map(len, names)\n",
+    "    rango = max(max_let)\n",
+    "\n",
+    "    output04 = []\n",
+    "    for x in range(rango):\n",
+    "        output04.append('     ')\n",
+    "        for c in names:\n",
+    "            try:\n",
+    "                output04.append(c[x] + '  ')\n",
+    "            except IndexError:\n",
+    "                output04.append('   ')\n",
+    "        output04.append('\\n')\n",
+    "    \n",
+    "    output04 = output04[0:-1]\n",
+    "\n",
+    "    return (f'{output01}\\n{\"\".join(output02b)}\\n{output03}\\n{\"\".join(output04)}')\n",
+    "\n",
+    "\n",
+    "food = Category('Food')\n",
+    "food.deposit(150)\n",
+    "food.withdraw(70.15, \"groceries\")\n",
+    "food.withdraw(35.89, \"restaurant and more food for dessert\")\n",
+    "\n",
+    "clothing = Category('Clothing')\n",
+    "clothing.deposit(50)\n",
+    "clothing.withdraw(10.15, \"calchetinitos\")\n",
+    "clothing.withdraw(17.12, \"sombrero de copa\")\n",
+    "\n",
+    "auto = Category('Auto')\n",
+    "auto.deposit(500)\n",
+    "auto.withdraw(150.05, \"volante\")\n",
+    "auto.withdraw(20.52, \"dados colganderos\")\n",
+    "\n",
+    "print(create_spend_chart([food, clothing, auto]))\n"
    ]
   }
  ],
