220718 Finalizados proyectos freeCodeCamp

--- a/freeCodeCamp/rectangles/pruebas.ipynb
+++ b/freeCodeCamp/rectangles/pruebas.ipynb
@@ -229,10 +229,12 @@
     "    def set_width(self, width):\n",
     "        super().set_width(width)\n",
     "        self.height = width\n",
+    "        self.side = width\n",
     "\n",
     "    def set_height(self, height):\n",
     "        super().set_height(height)\n",
     "        self.width = height\n",
+    "        self.side = height\n",
     "\n",
     "\n",
     "sq = Square(9)\n",
@@ -243,6 +245,87 @@
     "print(sq.get_picture())\n",
     "print(sq.width)\n",
     "print(sq.height)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y ahora vamos con la función difícil.  \n",
+    "La idea es que cabrán tantos rectángulos como el lado total // el lado del rectángulo dado.  \n",
+    "Así, si tenemos un rectángulo con un total de 8x4 y preguntamos cuántos cuadrados de 3x3 caben, el resultado será 2. Si son de 2x2, serán 8. Es decir, que en 32 cuadrados de 1x1 caben 2 de 3x3 (2x9=18) o 8 de 2x2 (8x4=32).  \n",
+    "Fíjate en esos 2 de 3x3. El área total permitiría otro espacio equivalente a 9, pero no encaja, por lo que se desperdician en total 14 espacios de 1x1. ==Lo importante es que pueda dividirse y da igual el resto==. \n",
+    "\n",
+    "> get_amount_inside: Takes another shape(square or rectangle) as an argument. Returns the number of times the passed in shape could fit inside the shape(with no rotations). For instance, a rectangle with a width of 4 and a height of 8 could fit in two squares with sides of 4.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle(width=4, height=8)\n",
+      "8\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle():\n",
+    "\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'Rectangle(width={self.width}, height={self.height})'\n",
+    "\n",
+    "    def set_width(self, width):\n",
+    "        self.width = width\n",
+    "\n",
+    "    def set_height(self, height):\n",
+    "        self.height = height\n",
+    "\n",
+    "    def get_area(self):\n",
+    "        return self.width * self.height\n",
+    "\n",
+    "    def get_perimeter(self):\n",
+    "        return 2 * self.width + 2 * self.height\n",
+    "\n",
+    "    def get_diagonal(self):\n",
+    "        return (self.width ** 2 + self.height ** 2) ** .5\n",
+    "\n",
+    "    def get_picture(self):\n",
+    "        if self.width > 49 or self.height > 49:\n",
+    "            return \"Too big for picture.\"\n",
+    "        else:\n",
+    "            string = ''\n",
+    "            for n in range(self.height):\n",
+    "                if n < self.height:\n",
+    "                    string += '*' * self.width + '\\n'\n",
+    "                else:\n",
+    "                    string += '*' * self.width\n",
+    "\n",
+    "        return string\n",
+    "    \n",
+    "    def get_amount_inside(self, polygon):\n",
+    "        how_many = (self.width // polygon.width) * \\\n",
+    "            (self.height // polygon.height)\n",
+    "        return how_many\n",
+    "\n",
+    "\n",
+    "rect = Rectangle(4, 8)\n",
+    "print(rect)\n",
+    "\n",
+    "sq3 = Rectangle(3, 3)\n",
+    "sq2 = Rectangle(2, 2)\n",
+    "\n",
+    "print(rect.get_amount_inside(sq2))\n",
+    "print(rect.get_amount_inside(sq3))\n"
    ]
   }
  ],
