231115 ejercicios linked list HackerRank

--- a/HackerRank/ejercicios_hackerRank_01.ipynb
+++ b/HackerRank/ejercicios_hackerRank_01.ipynb
@@ -898,6 +898,373 @@
     "\n",
     "print(sum(s))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linked List\n",
+    "### Print the Elements of a Linked List\n",
+    "`230817`\n",
+    "\n",
+    "Tengo que programar listas enlazadas, pero tengo un problema: la prueba va a llamar a una función con parámetro head, y yo tengo una clase donde puedo enlazar el resto de nodos desde head, pero no sé si podría llamarlos sin que la función sea una **función de la clase**. Voy a intentarlo.\n",
+    "\n",
+    "Vale, espera… La clase ya está hecha de forma interna y yo no tengo que hacerla.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class SinglyLinkedListNode:\n",
+    "#     def __init__(self, data):\n",
+    "#         self.data = data\n",
+    "#         self.next = None\n",
+    "\n",
+    "\n",
+    "# class SinglyLinkedList:\n",
+    "#     def __init__(self):\n",
+    "#         self.head = None\n",
+    "#         self.size = 0\n",
+    "\n",
+    "#     def insert_node(self, item):\n",
+    "#         new_node = SinglyLinkedListNode(item)\n",
+    "#         if self.size == 0:\n",
+    "#             self.head = new_node\n",
+    "#         else:\n",
+    "#             current = self.head\n",
+    "#             while current.next != None:\n",
+    "#                 current = current.next\n",
+    "#             current.next = new_node\n",
+    "#         self.size += 1\n",
+    "\n",
+    "\n",
+    "def printLinkedList(head):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complete the printLinkedList function below.\n",
+    "\n",
+    "#\n",
+    "# For your reference:\n",
+    "#\n",
+    "# SinglyLinkedListNode:\n",
+    "#     int data\n",
+    "#     SinglyLinkedListNode next\n",
+    "\n",
+    "def printLinkedList(head):\n",
+    "    current = head\n",
+    "    while current:\n",
+    "        print(current.data)\n",
+    "        current = current.next\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    llist_count = int(input())\n",
+    "\n",
+    "    llist = SinglyLinkedList()\n",
+    "\n",
+    "    for _ in range(llist_count):\n",
+    "        llist_item = int(input())\n",
+    "        llist.insert_node(llist_item)\n",
+    "\n",
+    "    printLinkedList(llist.head)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complete the insertNodeAtTail function below.\n",
+    "\n",
+    "#\n",
+    "# For your reference:\n",
+    "#\n",
+    "# SinglyLinkedListNode:\n",
+    "#     int data\n",
+    "#     SinglyLinkedListNode next\n",
+    "#\n",
+    "#\n",
+    "\n",
+    "def insertNodeAtTail(head, data):\n",
+    "    if head is None:\n",
+    "        head = SinglyLinkedListNode(data)\n",
+    "    else:\n",
+    "        current = head\n",
+    "        while current.next:\n",
+    "            current = current.next\n",
+    "        current.next = SinglyLinkedListNode(data)\n",
+    "    return head\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    llist_count = int(input())\n",
+    "\n",
+    "    llist = SinglyLinkedList()\n",
+    "\n",
+    "    for i in range(llist_count):\n",
+    "        llist_item = int(input())\n",
+    "        llist_head = insertNodeAtTail(llist.head, llist_item)\n",
+    "        llist.head = llist_head\n",
+    "\n",
+    "    print_singly_linked_list(llist.head, '\\n', fptr)\n",
+    "    fptr.write('\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertNodeAtHead(llist, data):\n",
+    "    # Write your code here\n",
+    "    new_head = SinglyLinkedListNode(data)\n",
+    "    if llist is None:\n",
+    "        return new_head\n",
+    "    new_head.next = llist\n",
+    "    return new_head\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    llist_count = int(input())\n",
+    "\n",
+    "    llist = SinglyLinkedList()\n",
+    "\n",
+    "    for _ in range(llist_count):\n",
+    "        llist_item = int(input())\n",
+    "        llist_head = insertNodeAtHead(llist.head, llist_item)\n",
+    "        llist.head = llist_head\n",
+    "\n",
+    "    print_singly_linked_list(llist.head, '\\n', fptr)\n",
+    "    fptr.write('\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertNodeAtPosition(llist, data, position):\n",
+    "    # Write your code here\n",
+    "    new_node = SinglyLinkedListNode(data)\n",
+    "    if llist is None:\n",
+    "        return new_node\n",
+    "    else:\n",
+    "        current = llist\n",
+    "        for i in range(position-1):\n",
+    "            current = current.next\n",
+    "        new_node.next = current.next\n",
+    "        current.next = new_node\n",
+    "\n",
+    "    return llist\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    llist_count = int(input())\n",
+    "\n",
+    "    llist = SinglyLinkedList()\n",
+    "\n",
+    "    for _ in range(llist_count):\n",
+    "        llist_item = int(input())\n",
+    "        llist.insert_node(llist_item)\n",
+    "\n",
+    "    data = int(input())\n",
+    "\n",
+    "    position = int(input())\n",
+    "\n",
+    "    llist_head = insertNodeAtPosition(llist.head, data, position)\n",
+    "\n",
+    "    print_singly_linked_list(llist_head, ' ', fptr)\n",
+    "    fptr.write('\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deleteNode(llist, position):\n",
+    "    # if current.next is None:\n",
+    "    #     return None\n",
+    "    if position == 0:\n",
+    "        return llist.next\n",
+    "    current = llist\n",
+    "    for i in range(position-1):\n",
+    "        current = current.next\n",
+    "    current.next = current.next.next\n",
+    "    return llist\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reversePrint(llist):\n",
+    "    current = llist\n",
+    "    reverse_list = [current.data]\n",
+    "    while current.next:\n",
+    "        current = current.next\n",
+    "        reverse_list.append(current.data)\n",
+    "    reverse_list.reverse()\n",
+    "    for i in reverse_list:\n",
+    "        print(i)\n",
+    "\n",
+    "# Comunidad:\n",
+    "\n",
+    "def reversePrint(llist):\n",
+    "    if llist:\n",
+    "        reversePrint(llist.next)\n",
+    "        print(llist.data)\n",
+    "\n",
+    "# o_O!!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tal vez me funcione algo como:\n",
+    "```\n",
+    "CREAR LISTA  \n",
+    "NODO_EN_LISTA = current\n",
+    "while current.next:  \n",
+    "    current = current.next\n",
+    "    CREAR NODO = current\n",
+    "    NODO.next = NODO_EN_LISTA\n",
+    "\n",
+    "stack = NODO_EN_LISTA\n",
+    "print(stack)\n",
+    "while stack.next:\n",
+    "    stack = stack.next\n",
+    "    print(stack)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse(llist):\n",
+    "    if llist.next is None:\n",
+    "        return llist\n",
+    "\n",
+    "    prev_node = llist\n",
+    "    current = prev_node.next\n",
+    "    prev_node.next = None\n",
+    "    next_node = current.next\n",
+    "    current.next = prev_node\n",
+    "    while next_node.next:\n",
+    "        prev_node = current\n",
+    "        current = next_node\n",
+    "        next_node = current.next\n",
+    "        current.next = prev_node\n",
+    "\n",
+    "    prev_node = current\n",
+    "    current = next_node\n",
+    "    current.next = prev_node\n",
+    "    return current\n",
+    "\n",
+    "\n",
+    "# Comunidad\n",
+    "def reverse(llist):\n",
+    "    if llist == None:\n",
+    "        return None\n",
+    "    current = llist\n",
+    "    prev = None\n",
+    "    while(current):\n",
+    "        next = current.next\n",
+    "        current.next = prev\n",
+    "        prev = current\n",
+    "        current = next\n",
+    "    llist = prev\n",
+    "    return llist\n",
+    "\n",
+    "# Esta me mola bastante, aunque no sé si el if es inútil\n",
+    "# Va haciendo algo parecido a \"b,a=a,b\"\n",
+    "def reverse(llist):\n",
+    "    cur = llist\n",
+    "    if cur:\n",
+    "        new_list = SinglyLinkedListNode(cur.data)\n",
+    "        cur = cur.next\n",
+    "    while cur:\n",
+    "        new_list, new_list.next = SinglyLinkedListNode(cur.data), new_list\n",
+    "        cur = cur.next\n",
+    "    return new_list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Intenté hacer una función de comparar listas de forma recursiva, pero no funciona porque el return es propio de cada instancia, y no termina la ejecución de la instancia principal. Así que al final lo que cuenta es el return final / de la principal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_lists(llist1, llist2):\n",
+    "    if llist1 and llist2:\n",
+    "        if llist1.data == llist2.data:\n",
+    "            compare_lists(llist1.next, llist2.next)\n",
+    "            return 1\n",
+    "        # else:\n",
+    "        #     return 0\n",
+    "    elif not llist1 and not llist2:\n",
+    "        return 1\n",
+    "    return 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what the fac\n"
+     ]
+    }
+   ],
+   "source": [
+    "llist1, llist2 = None, 2\n",
+    "if not llist1 and not llist2:\n",
+    "    print(\"ni uno ni otro\")\n",
+    "else:\n",
+    "    print(\"what the fac\")"
+   ]
   }
  ],
  "metadata": {
